# ai-code-context

./: .gitignore  README.md  capture_repo_snapshot.mjs  create_llm_snapshot.py  knowledge_weaver_snapshot.txt  package.json  repo_snapshot_llm_distilled.txt  requirements.txt
sample_project/: .env.example  README.md  auth.js  config.json  config.yaml  data_analysis.ipynb  data_processor.py  deploy.sh  pyproject.toml  repo_snapshot_llm_distilled.txt  schema.sql
