# Sample TOML Configuration
# This demonstrates TOML format support

[project]
name = "Sample Project"
version = "1.0.0"
description = "A comprehensive sample project for testing"
authors = ["Sample Developer <dev@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://example.com"
repository = "https://github.com/example/sample-project"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
]

[dependencies]
python = "^3.8"
requests = "^2.25.0"
pandas = "^1.3.0"
numpy = "^1.21.0"

[dev-dependencies]
black = "^21.0.0"
isort = "^5.8.0"
pytest = "^6.2.0"
mypy = "^0.812"